--- a/vignettes/gmvarkit-vignette.tex
+++ b/vignettes/gmvarkit-vignette.tex
@@ -1195,6 +1195,7 @@ Other          & \code{add_data}           & Add data to a GSMVAR model \\
 \end{table}
 
 \pagebreak
+\addcontentsline{toc}{section}{References}
 \bibliography{refs}
 
 \newpage
