--- a/vignettes/refs.bib
+++ b/vignettes/refs.bib
@@ -669,11 +669,12 @@
 
 
 @Manual{uGMAR,
-    title = {uGMAR: Estimate Univariate Gaussian and Student's $t$ Mixture Autoregressive Models},
+    title = {{uGMAR}: Estimate Univariate {Gaussian} and {Student's} $t$ Mixture Autoregressive Models},
     author = {S. Virolainen},
-    year = {2018},
-    note = {R package version 3.4.1 available at CRAN: \url{https://CRAN.R-project.org/package=uGMAR}},
+    year = {2025},
+    note = {R package version 3.6.0 available at CRAN: \url{https://CRAN.R-project.org/package=uGMAR}},
     url = {https://CRAN.R-project.org/package=uGMAR},
+    doi = {10.32614/CRAN.package.uGMAR},
 }
 
 @Manual{gmvarkit,
@@ -702,18 +703,21 @@
 
 @Article{Virolainen:2021,
   author = {S. Virolainen},
-  title = {A Mixture Autoregressive Model Based on Gaussian and Student's $t$-distributions},
-  year = {2021},
+  title = {A mixture autoregressive model based on {Gaussian} and {Student's} $t$-distributions},
+  year = {2022},
   journal = {Studies in Nonlinear Dynamics \& Econometrics},
+  volume = {26},
+  number = {4},
+  pages = {559--580},
   doi = {10.1515/snde-2020-0060},
 }
 
 @Article{Virolainen2:2021,
   author = {S. Virolainen},
-  title = {Gaussian and Student's t Mixture Vector Autoregressive Model with Application to the Asymmetric effects of monetary policy shocks in the Euro area},
-  year = {2022},
-  journal = {Unpublished working paper, available as arXiv:2109.13648},
-  url = {https://arXiv:2109.13648},
+  title = {{Gaussian} and {Student's} $t$ mixture vector autoregressive model with an application to monetary policy shocks},
+  year = {{in press}},
+  journal = {Econometrics and Statistics},
+  doi = {10.1016/j.ecosta.2025.09.003},
 }
 
 @Article{Virolainen:2025,
