--- a/vignettes/refs.bib
+++ b/vignettes/refs.bib
@@ -678,11 +678,12 @@
 }
 
 @Manual{gmvarkit,
-    title = {gmvarkit: Estimate Gaussian and Student's $t$ Mixture Vector Autoregressive Models},
+    title = {{gmvarkit}: Estimate {Gaussian} and {Student's} $t$ Mixture Vector Autoregressive Models},
     author = {S. Virolainen},
-    year = {2018},
-    note = {R package version 2.0.2 available at CRAN: \url{https://CRAN.R-project.org/package=gmvarkit}},
+    year = {2025},
+    note = {R package version 2.2.0 available at CRAN: \url{https://CRAN.R-project.org/package=gmvarkit}},
     url = {https://CRAN.R-project.org/package=gmvarkit},
+    doi = {10.32614/CRAN.package.gmvarkit},
 }
 
 @Manual{gmvarkitnormal,
